# risein-level4-green-belt

./: .gitignore  LICENSE  README.md
contracts/: Cargo.toml  README.md
contracts/lending-pool/: Cargo.toml
contracts/lending-pool/src/: lib.rs  test.rs
contracts/lending-pool/test_snapshots/test/: test_borrow_over_ltv_reverts.1.json  test_cannot_liquidate_healthy_loan.1.json  test_collateral_withdraw_blocked_when_unsafe.1.json  test_full_borrow_repay_cycle.1.json  test_liquidation_when_price_falls.1.json  test_lp_supply_and_withdraw.1.json  test_partial_collateral_withdraw.1.json
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs  test.rs
contracts/oracle/test_snapshots/test/: test_deviation_bound_allows_gradual_moves.1.json  test_deviation_bound_rejects_spike.1.json  test_no_price_data.1.json  test_twap_single_sample_fallback.1.json  test_twap_time_weighted.1.json
contracts/receipt/: Cargo.toml
contracts/receipt/src/: lib.rs  test.rs
contracts/receipt/test_snapshots/test/: test_attest_deposit_mints.1.json  test_attest_wrong_warehouse.1.json  test_demo_faucet.1.json  test_demo_faucet_cap.1.json  test_transfer_and_partial_redeem.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs  test.rs
contracts/token/test_snapshots/test/: test_double_init.1.json  test_faucet.1.json  test_faucet_over_limit.1.json  test_mint_and_balance.1.json  test_transfer.1.json  test_transfer_insufficient.1.json
deployments/: testnet.json
docs/: ARCHITECTURE.md  ONBOARDING.md  PILOT.md
scripts/: deploy_testnet.sh  set_price.sh
web/: .env.local.example  README.md  package-lock.json  package.json
web/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/src/app/api/feedback/: route.ts
web/src/app/app/: page.tsx
web/src/components/: FeedbackWidget.tsx  Navbar.tsx  WalletButton.tsx
web/src/components/app/: BorrowPanel.tsx  MarketsPanel.tsx  SupplyPanel.tsx
web/src/components/landing/: LiveStats.tsx
web/src/components/providers/: WalletProvider.tsx
web/src/components/ui/: Button.tsx  icons.tsx  primitives.tsx
web/src/hooks/: useContractData.ts  useTxAction.ts
web/src/lib/: config.ts  format.ts  monitoring.ts
web/src/lib/stellar/: client.ts  contracts.ts  polyfills.ts  wallet.ts
