[package]
name = "lending-pool"
version = "0.1.0"
edition = "2021"
description = "HarvestLink collateralized lending pool (LP shares, LTV borrow, interest, liquidation)"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

# The sibling contracts are dev-dependencies only: the pool calls them at runtime
# through the lightweight `#[contractclient]` interfaces defined in src/lib.rs, so
# it never links their exported wasm symbols (which would collide on `initialize`).
# They are pulled in here purely to drive the cross-contract integration tests.
[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
token = { workspace = true }
oracle = { workspace = true }
receipt = { workspace = true }
