[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
description = "HarvestLink price oracle with TWAP and anti-manipulation sanity bounds"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
